# brents_algo_min

./: CMakeLists.txt  main.cpp
